# Othello-SFML

./: CMakeLists.txt  README.md
include/: GameInfo.hpp  Othello.hpp
source/: GameInfo.cpp  Othello.cpp  main.cpp
